# Golang/docs/swagger.json
@@ -7,6 +7,33 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/app/version/check": {
+            "post": {
+                "description": "Checks if the current app version needs an update or a forced update based on the platform.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "app-version"
+                ],
+                "summary": "Check App Version",
+                "parameters": [
+                    {
+                        "description": "App Version Info",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CheckAppVersionRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/auth/account/": {
             "delete": {
                 "security": [
@@ -795,6 +822,23 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "handlers.CheckAppVersionRequest": {
+            "type": "object",
+            "required": [
+                "platform",
+                "version_code"
+            ],
+            "properties": {
+                "platform": {
+                    "type": "string",
+                    "example": "android"
+                },
+                "version_code": {
+                    "type": "integer",
+                    "example": 105
                 }
             }
         },
